--- a/_sass/sidebar.scss
+++ b/_sass/sidebar.scss
@@ -32,6 +32,9 @@ $sidebar-width-mobile: 15rem;
     }
 
     .sidebar-content {
+        
+        padding: 1.5rem;
+
         @include tablet {
             position: fixed;
             display: inline-block;
@@ -116,8 +119,8 @@ $sidebar-width-mobile: 15rem;
         position: fixed;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        bottom: 0;
+        right: 0;
         z-index: 99;
 
         background-color: rgba($color: #343947, $alpha: 0.0);
