--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -16,8 +16,7 @@ body {
 }
 
 // Modify spacing around page edge
-body .section {
-    padding: 1.5rem;
+body section {
     height: 100vh;
 }
 
